--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require": {
 		"php": ">=5.3.0",
-		"twig/twig": ">=1.9.1"
+		"twig/twig": ">=1.9.1",
+		"phpmailer/phpmailer": "dev-master"
     }
 }
