--- a/application/conf/application.ini
+++ b/application/conf/application.ini
@@ -20,6 +20,13 @@ application.cookie.pre = 'codejm_yaf_'
 ; view
 application.view.ext = html
 
+; route
+routes.backend.type = "rewrite"
+routes.backend.match="/(backend|backend/)$"
+routes.backend.route.module=Backend
+routes.backend.route.controller=index
+routes.backend.route.action=index
+
 ; ----------------------------------------------------------------------------
 ; 产品配置
 ; ----------------------------------------------------------------------------
