help filse change

--- a/application/conf/application.ini
+++ b/application/conf/application.ini
@@ -13,6 +13,7 @@ application.dispatcher.defaultAction = index
 
 application.site.baseUri = '/'
 application.site.assetsUri = '/'
+application.site.uploadUri= 'upload'
 application.site.name = '测试'
 application.site.companyname = 'codejm'
 
