upload class bug

--- a/application/conf/application.ini
+++ b/application/conf/application.ini
@@ -48,13 +48,13 @@ database.charset = "UTF8"
 ; ----------------------------------------------------------------------------
 ; 开发模式 php.ini 中定义
 ; [yaf]
-; yaf.environ=development
+; yaf.environ=development_codejm
 ; ----------------------------------------------------------------------------
-[development : yaf]
+[development_codejm : yaf]
 
 ; 显示错误
 application.dispatcher.throwException=1
-application.dispatcher.catchException=1
+application.dispatcher.catchException=0
 ; 产品是否显示错误提示
 application.showErrors=1
 
