cookie domain bug

--- a/application/conf/application.ini
+++ b/application/conf/application.ini
@@ -19,6 +19,7 @@ application.site.uploadUri= 'upload'
 application.site.name = '测试'
 application.site.companyname = 'codejm'
 
+application.cookie.domain = '.yaf.com'
 application.cookie.pre = 'codejm_yaf_'
 ; view
 application.view.ext = html
