--- a/application/conf/application.ini
+++ b/application/conf/application.ini
@@ -33,6 +33,7 @@ application.view.ext = html
 application.site.baseUri = '/'
 application.site.assetsUri = '/assets/'
 application.site.uploadUri = '/attachs/'
+application.site.uploadUrl = '/attachs/'
 
 ; 产品是否显示错误提示
 application.dispatcher.throwException=1
@@ -69,6 +70,7 @@ cache.cache_dir = PUBLIC_PATH'attachs/runtime/cache/file'
 application.site.baseUri = '/'
 application.site.assetsUri = '/assets/'
 application.site.uploadUri = '/attachs/'
+application.site.uploadUrl = '/attachs/'
 
 ; 显示错误
 application.dispatcher.throwException=1
