--- a/application/conf/application.ini
+++ b/application/conf/application.ini
@@ -32,7 +32,9 @@ application.view.ext = html
 ; site
 application.site.baseUri = '/'
 application.site.assetsUri = '/assets/'
+; 图片上传目录
 application.site.uploadUri = '/attachs/'
+; 图片服务器URL
 application.site.uploadUrl = '/attachs/'
 
 ; 产品是否显示错误提示
@@ -69,7 +71,9 @@ cache.cache_dir = PUBLIC_PATH'attachs/runtime/cache/file'
 ; site
 application.site.baseUri = '/'
 application.site.assetsUri = '/assets/'
+; 图片上传目录
 application.site.uploadUri = '/attachs/'
+; 图片服务器URL
 application.site.uploadUrl = '/attachs/'
 
 ; 显示错误
@@ -95,3 +99,6 @@ cache.host = '10.10.10.10'
 cache.port = '11211'
 cache.persistent = 0
 cache.cache_dir = PUBLIC_PATH'attachs/runtime/cache/file'
+
+; xhprof 配置
+xhprof.open = 0
