--- a/application/conf/application.ini
+++ b/application/conf/application.ini
@@ -10,14 +10,16 @@ application.library = APP_PATH "library"
 application.dispatcher.catchException = 1
 
 application.dispatcher.defaultModule = "Index"
-application.dispatcher.defaultController = "Index"
+application.dispatcher.defaultController = "Default"
 application.dispatcher.defaultAction = "index"
 
 application.site.baseUri = '/'
 application.site.assetsUri = '/assets/'
 application.site.uploadUri= 'upload'
-application.site.name = '测试'
+application.site.name = 'Yaf Demo'
 application.site.companyname = 'codejm'
+application.site.I18n = 0
+
 
 application.cookie.domain = '.yaf.com'
 application.cookie.pre = 'codejm_yaf_'
@@ -109,4 +111,4 @@ cache.persistent = 0
 cache.cache_dir = PUBLIC_PATH'attachs/runtime/cache/file'
 
 ; xhprof 配置
-xhprof.open = 0
+xhprof.open = 1
