--- a/application/conf/application.ini
+++ b/application/conf/application.ini
@@ -18,7 +18,6 @@ application.site.assetsUri = '/assets/'
 application.site.uploadUri= 'upload'
 application.site.name = 'Yaf Demo'
 application.site.companyname = 'codejm'
-application.site.I18n = 0
 
 
 application.cookie.domain = '.yaf.com'
@@ -33,6 +32,9 @@ resque.redis.prefix = ''
 resque.interval = 5
 resque.count = 1
 resque.pid_path = '/tmp/resque/'
+
+; xhprof 配置
+xhprof.open = 0
 
 ; ----------------------------------------------------------------------------
 ; 产品配置
@@ -69,6 +71,7 @@ database.pre = 'yaf_'
 cache.host = '10.10.10.10'
 cache.port = '11211'
 cache.persistent = 0
+cache.use_memcached = 0
 cache.cache_dir = PUBLIC_PATH'attachs/runtime/cache/file'
 
 ; ----------------------------------------------------------------------------
@@ -85,6 +88,7 @@ application.site.assetsUri = '/assets/'
 application.site.uploadUri = '/attachs/'
 ; 图片服务器URL
 application.site.uploadUrl = '/attachs/'
+application.site.I18n = 0
 
 ; 显示错误
 application.dispatcher.throwException=1
@@ -108,7 +112,5 @@ database.pre = 'yaf_'
 cache.host = '10.10.10.10'
 cache.port = '11211'
 cache.persistent = 0
+cache.use_memcached = 0
 cache.cache_dir = PUBLIC_PATH'attachs/runtime/cache/file'
-
-; xhprof 配置
-xhprof.open = 0
